--- a/Resume.html
+++ b/Resume.html
@@ -3,7 +3,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head> <title> Resume</title>
-<link rel="stylesheet" type="text/css" href="zheng webpage.css"/>
+<link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 
 <body>
